Added remove book function

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <main class="container">
       <dialog>
         <form action="">
+          <div>Add a new book</div>
           <div class="field-wrapper">
             <input
               type="text"
