Add read button functionality

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     <main class="container">
       <dialog>
         <form action="">
-          <div>Add a new book</div>
           <div class="field-wrapper">
             <input
               type="text"
@@ -54,7 +53,7 @@
           <div class="field-wrapper">
             <select id="read" name="read">
               <option value="read">Read</option>
-              <option value="not-read">Not read</option>
+              <option value="unread">Unread</option>
             </select>
           </div>
           <input class="btn btn-primary" type="submit" value="Add book" />
